# hikma

./: .gitignore  LICENSE.txt  Makefile  README.md  hared  meson.build
debian/: .gitignore  changelog  control  rules
src/: api.vala  chat_core.vala  crypto.vala  hikma.vala  meson.build  persist.vala  resources.xml  version.vala.in
src/hicolor/: index.theme
vapi/: md4c.vapi
